option('drun', type: 'boolean', value: true, description: 'Desktop file mode')
option('window', type: 'boolean', value: true, description: 'Window switcher mode')
option('timings', type: 'boolean', value: false, description: 'Timings output')
option('check', type: 'feature', description: 'Build and run libcheck-based tests')
